Fixed issue where the config folder was not added to integration test classpath

--- a/pom.xml
+++ b/pom.xml
@@ -40,18 +40,18 @@
     <spring.framework.version>3.2.10.RELEASE</spring.framework.version>
     <postgresql.version>9.3-1102-jdbc41</postgresql.version>
     <failsafe.argLine />
-    
+
     <!-- For integration test -->
     <alfresco.db.host>localhost</alfresco.db.host>
     <alfresco.db.port>5432</alfresco.db.port>
     <alfresco.db.driver>org.postgresql.Driver</alfresco.db.driver>
     <alfresco.db.datasource.class>org.postgresql.Driver</alfresco.db.datasource.class>
     <alfresco.db.name>alfresco-ci</alfresco.db.name>
-    <alfresco.db.url>jdbc:postgresql://localhost:5432/${alfresco.db.name}</alfresco.db.url>  
-    <alfresco.db.controlurl>jdbc:postgresql://localhost:5432/postgres</alfresco.db.controlurl>  
+    <alfresco.db.url>jdbc:postgresql://localhost:5432/${alfresco.db.name}</alfresco.db.url>
+    <alfresco.db.controlurl>jdbc:postgresql://localhost:5432/postgres</alfresco.db.controlurl>
     <alfresco.db.username>alfresco</alfresco.db.username>
     <alfresco.db.password>alfresco</alfresco.db.password>
-    
+
   </properties>
 
   <developers>
@@ -350,7 +350,7 @@
 
     <pluginManagement>
       <plugins>
-      
+
         <plugin>
           <groupId>org.alfresco.maven.plugin</groupId>
           <artifactId>alfresco-maven-plugin</artifactId>
@@ -528,6 +528,10 @@
           <configuration>
             <skipTests>true</skipTests>
             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <additionalClasspathElements>
+              <!-- Adds both the module config to test classpath -->
+              <additionalClasspathElement>${project.build.directory}/${project.build.finalName}/config</additionalClasspathElement>
+            </additionalClasspathElements>
           </configuration>
           <executions>
             <execution>
@@ -921,13 +925,13 @@
                   <!-- no transaction -->
                   <autocommit>true</autocommit>
                   <sqlCommand>CREATE DATABASE "${alfresco.db.name}" WITH OWNER = ${alfresco.db.username}
-       ENCODING = 'UTF8'
-       LC_COLLATE = 'en_US.UTF-8'
-       LC_CTYPE = 'en_US.UTF-8'
-       CONNECTION LIMIT = -1;</sqlCommand>
+                    ENCODING = 'UTF8'
+                    LC_COLLATE = 'en_US.UTF-8'
+                    LC_CTYPE = 'en_US.UTF-8'
+                    CONNECTION LIMIT = -1;</sqlCommand>
                 </configuration>
               </execution>
-              
+
             </executions>
           </plugin>
         </plugins>
