Changed maven git flow plugin

--- a/pom.xml
+++ b/pom.xml
@@ -231,9 +231,9 @@
 
       <!-- Use the jgitflow for enabling Git Flow release workflow -->
       <plugin>
-        <groupId>com.atlassian.maven.plugins</groupId>
-        <artifactId>maven-jgitflow-plugin</artifactId>
-        <version>1.0-alpha27</version>
+        <groupId>com.amashchenko.maven.plugin</groupId>
+        <artifactId>gitflow-maven-plugin</artifactId>
+        <version>1.0.8</version>
         <configuration>
           <!-- see goals wiki page for configuration options -->
         </configuration>
