--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,9 @@
     <hamcrest.version>1.3</hamcrest.version>
     <jmock.version>2.6.0</jmock.version>
     <failsafe.argLine />
+    <!-- Function tests should be skipped by default. Each module which need to run those -->
+    <!-- has to add this property to itself. -->
+    <ft.skip>true</ft.skip>
   </properties>
 
   <developers>
@@ -857,6 +860,9 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-dependency-plugin</artifactId>
+              <configuration>
+                <skip>${ft.skip}</skip>
+              </configuration>
               <executions>
                 <!-- Fetch and unpack Alfresco Repository / Share in the target / folder -->
                 <execution>
@@ -899,6 +905,11 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
+
+              <configuration>
+                <skip>${ft.skip}</skip>
+              </configuration>
+
               <executions>
                 <!-- When the AMP runs locally, src/test/webapp and src/test/resources will contain -->
                 <!-- the location of the configuration files -->
@@ -991,6 +1002,11 @@
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>build-helper-maven-plugin</artifactId>
               <version>1.9.1</version>
+
+              <configuration>
+                <skip>${ft.skip}</skip>
+              </configuration>
+
               <executions>
                 <execution>
                   <id>reserve-network-port</id>
@@ -1015,6 +1031,8 @@
               <artifactId>cargo-maven2-plugin</artifactId>
               <version>${maven.cargo.version}</version>
               <configuration>
+                <skip>${ft.skip}</skip>
+
                 <container>
                   <containerId>tomcat7x</containerId>
                   <artifactInstaller>
@@ -1135,12 +1153,12 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <skipTests>${ft.skip}</skipTests>
+            </configuration>
             <executions>
               <execution>
                 <id>functional-test</id>
-                <configuration>
-                  <skipTests>false</skipTests>
-                </configuration>
               </execution>
             </executions>
           </plugin>
