--- a/pom.xml
+++ b/pom.xml
@@ -833,24 +833,54 @@
           <version>${h2.version}</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
           <groupId>tk.skuro.alfresco</groupId>
           <artifactId>h2-support</artifactId>
           <version>${h2-support.version}</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-instrument-tomcat</artifactId>
           <version>3.0.7.RELEASE</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
           <groupId>${alfresco.client.war.groupId}</groupId>
           <artifactId>${alfresco.client.war}</artifactId>
           <type>war</type>
           <version>${alfresco.client.war.version}</version>
           <scope>test</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>${alfresco.groupId}</groupId>
+          <artifactId>alfresco-repository</artifactId>
+          <version>${alfresco.version}</version>
+          <scope>provided</scope>
+          <exclusions>
+            <exclusion>
+              <groupId>org.codehaus.groovy</groupId>
+              <artifactId>groovy-all</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+
+        <dependency>
+          <groupId>${alfresco.groupId}</groupId>
+          <artifactId>alfresco-repository</artifactId>
+          <version>${alfresco.version}</version>
+          <classifier>config</classifier>
+          <scope>provided</scope>
+          <exclusions>
+            <exclusion>
+              <groupId>org.codehaus.groovy</groupId>
+              <artifactId>groovy-all</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
       </dependencies>
 
