--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.alfresco.maven</groupId>
     <artifactId>alfresco-sdk-parent</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
   </parent>
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>2.0.1</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -31,8 +31,8 @@
     <env>local</env>
     <tomcat.host>localhost</tomcat.host>
     <tomcat.port>8080</tomcat.port>
-    <java.source.version>1.7</java.source.version>
-    <java.target.version>1.7</java.target.version>
+    <java.source.version>1.8</java.source.version>
+    <java.target.version>1.8</java.target.version>
     <maven.failsafe.version>2.18.1</maven.failsafe.version>
     <maven.cargo.version>1.4.14</maven.cargo.version>
     <cargo.tomcat.version>7.0.53</cargo.tomcat.version>
@@ -48,6 +48,8 @@
     <restassured.version>2.4.1</restassured.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jmock.version>2.6.0</jmock.version>
+    <!-- JUnit-dep does not exist for 4.12 -->
+    <junit.version>4.11</junit.version>
     <failsafe.argLine />
     <!-- Function tests should be skipped by default. Each module which need to run those -->
     <!-- has to add this property to itself. -->
