--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>1.1.1.14</version>
+  <version>1.1.1.15-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -1194,12 +1194,12 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <skipTests>${ft.skip}</skipTests>
-            </configuration>
             <executions>
               <execution>
                 <id>functional-test</id>
+                <configuration>
+                  <skipTests>${ft.skip}</skipTests>
+                </configuration>
               </execution>
             </executions>
           </plugin>
