--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
         <artifactId>jmock</artifactId>
         <version>${jmock.version}</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <artifactId>hamcrest-core</artifactId>
+            <groupId>org.hamcrest</groupId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
@@ -217,6 +223,12 @@
         <artifactId>jmock-junit4</artifactId>
         <version>${jmock.version}</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <artifactId>junit-dep</artifactId>
+            <groupId>junit</groupId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
@@ -238,6 +250,27 @@
         <artifactId>hamcrest-core</artifactId>
         <version>${hamcrest.version}</version>
         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>com.jayway.restassured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>${restassured.version}</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-xml</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-json</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -886,11 +919,13 @@
         <dependency>
           <groupId>${alfresco.groupId}</groupId>
           <artifactId>alfresco-repository</artifactId>
+          <version>${alfresco.version}</version>
         </dependency>
 
         <dependency>
           <groupId>${alfresco.groupId}</groupId>
           <artifactId>alfresco-repository</artifactId>
+          <version>${alfresco.version}</version>
           <classifier>config</classifier>
         </dependency>
       </dependencies>
