--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>1.1.1.17-SNAPSHOT</version>
+  <version>1.1.1.17</version>
   <packaging>pom</packaging>
 
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -1240,6 +1240,102 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    
+    <profile>
+      <id>purge-postgres</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <version>1.5</version>
+
+            <dependencies>
+              <!-- specify the dependent jdbc driver here -->
+              <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+              </dependency>
+            </dependencies>
+
+            <!-- common configuration shared by all executions -->
+            <configuration>
+              <driver>${alfresco.db.datasource.class}</driver>
+              <url>${alfresco.db.controlurl}</url>
+              <username>${alfresco.db.username}</username>
+              <password>${alfresco.db.password}</password>
+              <!-- You can comment out username/password configurations and have maven to look them up in your settings.xml using ${settingsKey} -->
+              <settingsKey>sensibleKey</settingsKey>
+              <!--all executions are ignored if -Dmaven.test.skip=true -->
+              <skip>${maven.test.skip}</skip>
+            </configuration>
+
+            <executions>
+              <execution>
+                <id>drop-db-before-test-if-any</id>
+                <phase>process-test-resources</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <!-- need another database to drop the targeted one -->
+                  <autocommit>true</autocommit>
+                  <sqlCommand>DROP DATABASE "${alfresco.db.name}";</sqlCommand>
+                  <!-- ignore error when database is not avaiable -->
+                  <onError>continue</onError>
+                </configuration>
+              </execution>
+
+              <execution>
+                <id>create-db</id>
+                <phase>process-test-resources</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <!-- no transaction -->
+                  <autocommit>true</autocommit>
+                  <sqlCommand>CREATE DATABASE "${alfresco.db.name}" WITH OWNER = ${alfresco.db.username}
+                    ENCODING = 'UTF8'
+                    LC_COLLATE = 'en_US.UTF-8'
+                    LC_CTYPE = 'en_US.UTF-8'
+                    CONNECTION LIMIT = -1
+                    TEMPLATE template0;</sqlCommand>
+                </configuration>
+              </execution>
+
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+
+    </profile>
+    <profile>
+      <id>postgres</id>
+      <properties>
+        <!-- For integration test -->
+        <postgresql.version>9.3-1102-jdbc41</postgresql.version>
+        <alfresco.db.host>localhost</alfresco.db.host>
+        <alfresco.db.port>5432</alfresco.db.port>
+        <alfresco.db.driver>org.postgresql.Driver</alfresco.db.driver>
+        <alfresco.db.datasource.class>org.postgresql.Driver</alfresco.db.datasource.class>
+        <alfresco.db.name>alfresco-ci</alfresco.db.name>
+        <alfresco.db.url>jdbc:postgresql://localhost:5432/${alfresco.db.name}</alfresco.db.url>
+        <alfresco.db.controlurl>jdbc:postgresql://localhost:5432/postgres</alfresco.db.controlurl>
+        <alfresco.db.username>alfresco</alfresco.db.username>
+        <alfresco.db.password>alfresco</alfresco.db.password>
+      </properties>
+      <dependencies>
+        <!-- specify the dependent jdbc driver here -->
+        <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>${postgresql.version}</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
