--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>2.1.0</version>
+  <version>2.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -253,6 +253,27 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <version>${spring.framework.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.jayway.restassured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>${restassured.version}</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-xml</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-json</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -872,18 +893,28 @@
           <version>${h2.version}</version>
           <scope>test</scope>
         </dependency>
+
+        <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>${postgresql.version}</version>
+          <scope>test</scope>
+        </dependency>
+
         <dependency>
           <groupId>tk.skuro.alfresco</groupId>
           <artifactId>h2-support</artifactId>
           <version>${h2-support.version}</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-instrument-tomcat</artifactId>
           <version>3.0.7.RELEASE</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
           <groupId>${alfresco.client.war.groupId}</groupId>
           <artifactId>${alfresco.client.war}</artifactId>
@@ -895,11 +926,13 @@
         <dependency>
           <groupId>${alfresco.groupId}</groupId>
           <artifactId>alfresco-repository</artifactId>
+          <version>${alfresco.version}</version>
         </dependency>
 
         <dependency>
           <groupId>${alfresco.groupId}</groupId>
           <artifactId>alfresco-repository</artifactId>
+          <version>${alfresco.version}</version>
           <classifier>config</classifier>
         </dependency>
       </dependencies>
@@ -1099,6 +1132,10 @@
                     <dependency>
                       <groupId>com.h2database</groupId>
                       <artifactId>h2</artifactId>
+                    </dependency>
+                    <dependency>
+                      <groupId>org.postgresql</groupId>
+                      <artifactId>postgresql</artifactId>
                     </dependency>
                     <dependency>
                       <groupId>tk.skuro.alfresco</groupId>
