--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <alfresco.client.war>alfresco</alfresco.client.war>
     <alfresco.client.war.groupId>${alfresco.groupId}</alfresco.client.war.groupId>
     <alfresco.client.war.version>${alfresco.version}</alfresco.client.war.version>
-    <alfresco.data.location>./alf_data_dev</alfresco.data.location>
+<!--    <alfresco.data.location>./alf_data_dev</alfresco.data.location> //Causes problems with 5.1 all in one runner -->
     <!-- This controls which properties will be picked in src/test/properties for embedded run -->
     <env>local</env>
     <tomcat.host>localhost</tomcat.host>
