--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>1.1.1.20-SNAPSHOT</version>
+  <version>1.1.1.20</version>
   <packaging>pom</packaging>
 
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -47,6 +47,7 @@
     <hamcrest.version>1.3</hamcrest.version>
     <jmock.version>2.6.0</jmock.version>
     <failsafe.argLine />
+    <jacoco.agent.arg />
     <!-- Function tests should be skipped by default. Each module which need to run those -->
     <!-- has to add this property to itself. -->
     <ft.skip>true</ft.skip>
