Exclude coverage on certain files by default

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
     <sonar.jacoco.reportPath>${project.build.directory}/coverage-reports/jacoco-all.exec</sonar.jacoco.reportPath>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
     <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.coverage.exclusions>
+      **/*.css,
+      **/*.ftl,
+      **/*.xml,
+      **/*.js
+    </sonar.coverage.exclusions>
   </properties>
 
   <developers>
